introducing Availabell to the world

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Aralel Software Studios",
   "short_name": "Aralel",
-  "description": "Aralel Software Studios combines Swiss precision with German engineering to create exceptional gaming experiences.",
+  "description": "Aralel Software Studios combines Swiss precision with German engineering to create exceptional gaming experience.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
