--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 include: [".well-known"]
+
+defaults:
+  - scope:
+      path: ".well-known/assetlinks.json"
+    values:
+      layout: none
+      content_type: application/json
