--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Aralel Software Studios",
+  "name": "Aralel GMBH",
   "short_name": "Aralel",
-  "description": "Aralel Software Studios combines Swiss precision with German engineering to create exceptional experience.",
+  "description": "Aralel GMBH combines Swiss precision with German engineering to build exceptional digital products: apps, websites, ecommerce, and games.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3498db",
+  "theme_color": "#1d4ed8",
   "icons": [
     {
       "src": "icon-192.png",
