GmbH is correct

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Aralel Gmbh",
+  "name": "Aralel GmbH",
   "short_name": "Aralel",
-  "description": "Aralel Gmbh combines Swiss precision with German engineering to build exceptional digital products: apps, websites, ecommerce, and games.",
+  "description": "Aralel GmbH combines Swiss precision with German engineering to build exceptional digital products: apps, websites, ecommerce, and games.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
